fixing texts, adding meta tags and CVs

--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--  Social META Tags -->
+    <meta property="og:title" content="JUAN-BH'S Porfolio" />
+    <meta property="og:type" content="porfolio" />
+    <meta
+      property="og:image"
+      content="./src/assets/imgProjects/porfolioThumbnail.png"
+    />
+    <meta property="og:url" content="https://www.juan-bh.com/" />
+    <meta
+      property="og:description"
+      content="Juan Manuel Becerra's front-end developer porfolio, where he shows his education, skills and personal projects."
+    />
+    <meta property="og:site_name" content="JUAN-BH" />
+
     <link rel="icon" href="./public/page_icon.svg" />
     <link
       rel="stylesheet"
