--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta property="og:site_name" content="JUAN-BH" />
 
-    <link rel="icon" href="./public/page_icon.svg" />
+    <link rel="icon" href="./page_icon.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
